Website/SourceCode/Profiles/Profiles/App_Themes/DEFAULT.css
/* ... */
.notice { color: #990000; }

/* COLS */
.profiles .profilesContentMain { width: 680px; margin: 10px 60px 0 20px; } 
.profiles .profilesContentPassive { width: 190px; padding: 4px 20px 0 0; }
.search .profiles .profilesContentMain { width: 550px; margin: 0 35px; }
.search .profiles .profilesContentPassive { width: 142px; padding: 9px 20px 0 0; }
#defaultmenu, #minisearch { display: none; } 

/* LINK DEFAULTS */
.listTable .listTableLink, .searchResults td:first-child , .linky,
.profiles a, .profiles a:visited { text-decoration: none; color: #178CCB; }
.searchResults td:first-child:hover, .linky:hover { text-decoration: underline; cursor: pointer; }
#ctl00_ContentMain_rptMain_ctl00_ctl00_ctl00_btnEditProperty:before,
.dblarrow:before { content: ">>"; font-family: "Courier New", Courier, monospace; letter-spacing: -3px; font-size: 12px; font-weight: bold; display: inline-block; padding-right: 6px; vertical-align: middle; }
#ctl00_ContentMain_rptMain_ctl00_ctl00_ctl00_btnEditProperty:hover:before,
.dblarrow:hover:before { text-decoration: none; }

/* SEARCH FORM */
.profiles .profilesPageColumnLeft { padding: 18px 6px 0 20px; }
.search .profiles .profilesContentMain .pageTabs { padding-left: 315px; 
  background-image: url('../Framework/Images/tab_back.gif'); }
.searchForm td div.header { font-size: 30px; font-weight: bold; margin: 16px 0 8px; }
.searchForm .searchSection { margin-bottom: 0; border: 1px solid #CCC !important; }
.searchForm #div1 { border-top: none; margin-top: 20px; padding-top: 8px; } 
.searchForm #div1 th { font-weight: normal; width: 140px; }
#searchOptions { margin-top: -19px; margin-bottom: 25px; }
#ctl00_ContentMain_rptMain_ctl00_ctl00_searchfor,
#txtSearchFor { height: 30px; }
.profiles a.search-button { border: none; padding: 5px 12px 4px 33px; background-position: 10% 50%; font-size: 18px; }
.unused, input#chkExactphrase, input#institutionallexcept, input#departmentallexcept { display: none; }
.searchForm .inputText { width: 249px; }
#divChkList { border: 1px solid #CCC !important; margin-top: -5px; width: 248px !important; 
  height: 190px !important; padding-top: 15px !important; } 
#divOtherOptions { 
  border-right: 1px solid #CCC !important;
  border-bottom: 1px solid #CCC !important;
  border-left: 1px solid #CCC !important;
  height: auto !important; 
}
#ctcFirst_rMaster_ctl00_imgExpand { margin: 0 10px 0 -19px; }
#andor { margin: -12px 0 -32px 153px; } 
#andor span { color: #666; background-color: #F8F8F9; padding: 0 6px; font-size: 11px; letter-spacing: 2px; }

/* SEARCH RESULTS */
.listTable th { border: 1px solid #CCC !important; }
.direct .listTable tr:first-child td,
#tblSearchResults th { text-align: left; font-weight: bold; }
#filters ul li strong { font-size: 150%; line-height: 20px; }
.connectionContainerTable { background-color: #F7F7F8; height: 60px; border-color: #CCC; }
#ctl00_ContentMain_rptMain_ctl00_ctl00_gvConnectionDetails th,
#ctl00_ContentMain_rptMain_ctl00_ctl00_gvIndirectConnectionDetails th { text-align: left; padding-left: 6px; }
.listTable .evenRow, .evenRow { background-color: #F7F7F8; }
.listTable td { border: none; border-right: solid 1px #CCC; cursor: default; }
.listTablePagination { border-color: #CCC; background-color: #FFF; 
  margin-bottom: 10px; width: 667px; }
* html .listTablePagination { width: 678px; margin-bottom: 40px; }
*+html .listTablePagination { width: 678px; margin-bottom: 40px; }
.listTablePaginationFL img { margin-top: 4px; } 
.listTablePaginationFL img { margin-top: 5px\9; } 
#why { width:190px; font-size:11px; padding:1px; text-align:center; background-color:#F7F7F8; margin-left:30px }
.listTable table, .oddRow td, .evenRow td, .topRow th,
#thetable1 th, #similarConnection th,
#ctl00_ContentMain_rptMain_ctl00_ctl00_gvIndirectConnectionDetails,
#ctl00_ContentMain_rptMain_ctl00_ctl00_gvWhoCanIEdit td,
#ctl00_ContentMain_rptMain_ctl00_ctl00_gvYouCanEdit td,
#ctl00_ContentMain_rptMain_ctl00_ctl00_gvMyProxies tr td,
#ctl00_ContentMain_rptMain_ctl00_ctl00_pnlProxySearchResults tr th,
#ctl00_ContentMain_rptMain_ctl00_ctl00_pnlProxySearchResults tr td { 
  border: 1px solid #CCC !important; 
}
#ctl00_ContentMain_rptMain_ctl00_ctl00_pnlProxySearchResults .listTablePagination tr td { 
  border: none !important; padding-top: 5px; }
#ctl00_ContentMain_rptMain_ctl00_ctl00_pnlProxySearchResults tr.edittable td:first-child, 
#ctl00_ContentMain_rptMain_ctl00_ctl00_pnlProxySearchResults tr.evenRow td:first-child { 
  color: #178CCB; cursor: pointer; }
.connectionContainerTable { background-color: #F7F7F8; border: 1px solid #CCC; }
.connectionContainerTable td { width: 220px; }

/* PROFILE PAGES */
img#ctl00_ContentMain_rptMain_ctl00_ctl00_imgPhoto { width: 150px; }
.PropertyGroup { display: none; }
.PropertyGroupItem { margin: 0 0 10px; border: none; }
.PropertyItemHeader { font-size: 16px; background-color: #FFF; clear:both;
  border-top: 1px solid #EEE; padding: 6px 0 0 !important; margin: 15px 0 0; }
.PropertyItemHeader img { display: none; }
.PropertyItemHeader:focus { outline: none; }
#toc { min-height: 27px; margin: 30px 0; background-color: #F7F7F8; border: none; width: 680px\9; padding-bottom: 4px\9; }
#toc ul { padding: 0 0 0 10px; }
#toc ul li { list-style-type: none; display: inline-block; white-space: nowrap; padding: 0 15px 0 0;
   border-right: 1px solid #CCC; margin: 5px 15px 5px 0; } 
.PropertyGroupData { padding-bottom: 0; }
.PropertyGroupData div { padding: 0 !important; }
.profiles .ProfilesContentMain .PropertyGroupData table { width: 100% !important; }
.profiles .ProfilesContentMain .PropertyGroupData td { line-height: 16px; padding: 1px 6px 8px 0 !important;vertical-align: top; }
.profiles .ProfilesContentMain .PropertyGroupData hr { border: none; background-color: #F7F7F8; height: 1px; }
.profiles .profilesContentMain .sectionHeader { padding-top: 6px;  text-decoration: none; }
.profiles .profilesContentMain .awardsList { margin-top: 6px; }
/* ... */

